[package]
name = "poker-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures-util = "0.3"
dashmap = "5.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
